...
		<item>Get info on current framerate and calculation period</item>
		<item>Settings</item>
	</string-array>

	<!-- Fragment section titles -->
	<string name="preview_image_content_description">The view for the down-scaled preview image</string>
	<string name="a_tools_menu_item">a tools menu item</string>
	<string name="show_hide_the_tools_menu">Show/Hide the tools menu</string>
	<string name="color_mode_rgb">Set color mode to RGB</string>
	<string name="color_mode_rgb_neg">Set color mode to RGB negative</string>
	<string name="color_mode_r">Set color mode to red</string>
	<string name="color_mode_g">Set color mode to green</string>
	<string name="color_mode_b">Set color mode to blue</string>
...
	<!-- dialogs -->
	<string name="quit_dialog_string">"Are you sure you want to quit VideOSC?"</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<!-- settings -->
	<string name="selection_network_settings">Network Settings</string>
	<string name="selection_resolution_settings">Resolution Settings</string>
	<string name="command_device_mappings">Command-Device Mappings</string>
	<string name="selection_sensor_settings">Sensor Settings</string>
	<string name="selection_debug_settings">Debug Settings (temporary)</string>
	<string name="selection_about_videosc">About VideOSC</string>
	<string name="send_osc_to_ip">Send OSC to IP address:</string>
	<string name="default_remote_ip">192.168.1.105</string>
	<string name="send_osc_to_port">Send OSC to port:</string>
	<string name="default_remote_port">57120</string>
	<string name="device_ip_address_head">Device IP address:</string>
	<string name="device_udp_port">Device UDP port (needs app restart):</string>
	<string name="device_udp_port_value">32000</string>
	<string name="device_tcp_port">Device TCP/IP port (needs app restart):</string>
	<string name="device_tcp_port_value">32100</string>
	<string name="root_command_name_head">Command namespace:</string>
	<string name="slash">/</string>
	<string name="root_cmd_name">vosc</string>
	<string name="sub_cmd_name"><![CDATA[/<sub_cmd_name>]]></string>
	<string name="cancel">@android:string/cancel</string>
	<string name="save_settings">save settings</string>
	<string name="horizontal_resolution">Horizontal resolution:</string>
	<string name="vertical_resolution">Vertical resolution:</string>
	<string name="fixed_frame_rate">Fixed framerate. Unchecking this option may improve color recoginition in dark environments yet result in a decreased frame rate.</string>
	<string name="set_calculation_period">Set calculation period:</string>
	<string name="normalize_output_text">Normalize output (0.0&#8211;1.0, does not apply to sensor values).</string>
	<string name="remember_activated_text">Remember activated/deactivated/fixed pixels on quit.</string>
	<string name="orientation_sensor">Orientation sensor: Rotation in degrees – \'/%1$s/ori\', x, y, z, timestamp, accuracy</string>
	<string name="accelerometer">Accelerometer: Force in m/s^2 – \'/%1$s/acc\', x, y, z, timestamp, accuracy</string>
	<string name="linear_acceleration">Linear acceleration sensor: m/s^2 minus gravity – \'/%1$s/lin_acc\', x, y, z, timestamp, accuracy</string>
	<string name="magnetic_field_sensor">Magnetic field sensor: Geomagnetic field in µT – \'/%1$s/mag\', x, y, z, timestamp, accuracy</string>
	<string name="gravity_sensor">Gravity sensor: Force of gravity in m/s^2 – \'/%1$s/grav\', x, y, z, timestamp, accuracy</string>
	<string name="proximity_sensor">Proximity sensor: Distance from sensor, typically 0, 5 – \'/%1$s/prox\', distance, timestamp, accuracy</string>
	<string name="light_sensor">Light sensor: Illumination from sensor in lx – \'/%1$s/light\', illumination, timestamp, accuracy</string>
	<string name="air_pressure">Air pressure sensor: Ambient pressure in hPa or mbar – \'/%1$s/press\', pressure, timestamp, accuracy</string>
	<string name="temperature_sensor">Temperature sensor: Temperature in °C – \'/%1$s/temp\', temperature</string>
	<string name="geo_location_sensor">Geo location: \'/%1$s/loc\', latitude, longitude, altitude</string>
	<string name="humidity_sensor">Humidity sensor: Humidity in %% – \'/%1$s/hum\', humidity</string>
	<string name="camera_request_permission">VideOSC needs the camera permission</string>
	<string name="zoom_info">zoom:</string>
	<string name="curr_active_camera">The currently active camera</string>
	<string name="select_framerate_min_max">Select framerate (min/max fps):</string>
	<string name="msg_on_camera_open_fail">The camera failed to open. Possibly you will have to restart the device.</string>
	<string name="OK">OK</string>
	<string name="hide_pixel_image_overlay">Hide pixel image overlay</string>
	<string name="count_messages">Report the number of OSC bundles created vs. the number of actually sent OSC bundles in OSC messages \'/num_red_bundles\', \'/num_green_bundles\' and \'/num_blue_bundles\'.</string>
	<string name="debug_eplanation">The following settings will not get stored permanently. They will get reset with every restart of VideOSC.</string>
	<string name="fix_exposure_temporary">Fix exposure temporarily (will be reset on restart)</string>
	<string name="set_exposure_to_fixed">Set exposure to fixed</string>
	<string name="dont_fix_exposure">Don\'t fix exposure</string>
	<string name="exposure_toast_text">Point your device at the lighting situation you want the camera exposure to be set to and hit OK.</string>
	<string name="grant">grant</string>
	<string name="deny">deny</string>
	<string name="ask_for_settings_permission">Permissions to write settings not granted. Shall they be granted?</string>
	<string name="settings_request_permissions">VideOSC needs to be able to save settings.</string>
...
