<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/resolution_settings"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

	<LinearLayout
		android:id="@+id/resolution"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="horizontal">

		<LinearLayout
			android:id="@+id/resolution_horizontal"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:orientation="vertical">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/horizontal_resolution"/>

			<EditText
				android:id="@+id/resolution_horizontal_field"
				style="@style/EditTextPadding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="1234567890"
				android:inputType="number"
				android:nextFocusDown="@+id/resolution_vertical_field"/>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/resolution_vertical"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.5"
			android:orientation="vertical">

			<TextView
...
				android:id="@+id/resolution_vertical_field"
				style="@style/EditTextPadding"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:digits="1234567890"
				android:inputType="number"
				android:nextFocusDown="@+id/calulation_period_field"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false"
		android:orientation="vertical">

		<Button
			android:id="@+id/framerate_selection"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginBottom="10dp"
			android:background="@color/transparent"
			android:drawableEnd="@drawable/carret_down_white"
			android:text="@string/select_framerate_min_max_1_s"
			android:drawableRight="@drawable/carret_down_white"
			android:drawablePadding="10dp"/>

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/normalize_output_checkbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:text="@string/normalize_output_text"/>

		<View style="@style/Divider"/>

		<androidx.appcompat.widget.SwitchCompat
			android:id="@+id/remember_activated_checkbox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="20dp"
			android:paddingBottom="20dp"
			android:text="@string/remember_activated_text"/>

...
