<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/network_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/device_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:baselineAligned="false"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/device_ip_address_head" />

        <TextView
            android:id="@+id/device_ip_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="17sp" />

...
            android:digits="0123456789"
            android:hint="@string/tcp_receive_port"
            android:inputType="number"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textSize="16sp"
            android:nextFocusDown="@+id/root_cmd_name_field" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/root_command_name_head" />
...
            android:paddingBottom="15dp"
            android:autofillHints="my_secret" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/remote_address"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.5"
        android:baselineAligned="false"
        android:orientation="vertical">

...
