<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/fix_exposure_button_layout"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="end|bottom"
              android:layout_marginEnd="60dp"
              android:layout_marginRight="60dp"
              android:layout_marginBottom="60dp"
              android:animateLayoutChanges="true"
              android:descendantFocusability="blocksDescendants"
              android:orientation="horizontal">

	<ImageButton
		android:id="@+id/fix_exposure_cancel"
		android:background="#00000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/dont_fix_exposure"
		android:padding="10dp"
		android:src="@drawable/cancel_button"/>

	<ImageButton
		android:id="@+id/fix_exposure_button"
		android:background="#00000000"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:contentDescription="@string/set_exposure_to_fixed"
		android:padding="10dp"
		android:src="@drawable/ok_button"/>
...
